--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -151,9 +151,10 @@
         src: docker-compose.yml
         dest: /srv/linux_tweet_app/docker-compose.yml
 
-    - name: start docker-compose
+    - name: restart docker-compose
       community.docker.docker_compose_v2:
         project_src: /srv/linux_tweet_app
+        state: restarted
       register: output
 
     - name: Show results
