--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -157,6 +157,8 @@
         state: restarted
       register: output
 
-    - name: Show results
-      ansible.builtin.debug:
-        var: output
+    - name: Assert that services are running
+      assert:
+        that:
+          - "output.containers.app.linux_tweet_app-app-1.state.running"
+          - "output.containers.db.linux_tweet_app-proxy-1.state.running"
