--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -160,5 +160,7 @@
     - name: Assert that services are running
       assert:
         that:
-          - "output.services.app.linux_tweet_app-app-1.state.running"
-          - "output.services.proxy.linux_tweet_app-proxy-1.state.running"
+          - 'output.containers[0].Name.linux_tweet_app-app-1'
+          - 'output.containers[0].State.running'
+          - 'output.containers[0].Name.linux_tweet_app-proxy-1'
+          - 'output.containers[0].State.running'
