--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -157,6 +157,10 @@
         state: restarted
       register: output
 
+    - name: Debug output
+      debug:
+        msg: output.containers[0]['Name']
+
     - name: Assert that services are running
       assert:
         that:
