--- a/ansible/docker-compose.yml
+++ b/ansible/docker-compose.yml
@@ -6,3 +6,6 @@ services:
     volumes:
       - '/srv/nginx/ssl:/etc/ssl'
       - '/srv/nginx/nginx.conf:/etc/nginx/nginx.conf'
+    ports:
+      - '80:80'
+      - '443:443'
