--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -148,6 +148,7 @@
     - name: Start docker-compose
       community.docker.docker_compose_v2:
         project_src: /srv/linux_tweet_app
+        recreate: always
       register: output
 
     - name: Assert that services are running
