--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -17,19 +17,19 @@
         - ca-certificates
         - curl
 
-    - name: Create keyring dir
+    - name: Create GPG key dir
       file:
         path: /etc/apt/keyrings/
         state: directory
         mode: '0755'
 
-    - name: Download key
+    - name: Download GPG key
       get_url:
         url: https://download.docker.com/linux/ubuntu/gpg
         dest: /etc/apt/keyrings/docker.asc
         mode: a+r
 
-    - name: Add repo
+    - name: Add repository
       apt_repository:
         repo: 'deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable'
 
