--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -11,6 +11,8 @@ on:
     paths:
       - terraform/**
       - .github/workflows/terraform.yml
+  workflow_dispatch:
+
 jobs:
   terraform:
     name: "Terraform"
