--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -76,7 +76,7 @@
 
     - name: Create cert challenge
       acme_certificate:
-        acme_directory: https://acme-v02.api.letsencrypt.org/directory
+        acme_directory: https://acme-staging-v02.api.letsencrypt.org/directory
         terms_agreed: true
         acme_version: 2
         account_key_src: /srv/nginx/acme_account.key
